Can create EnumDeclaration into code but doesn't appear